# graphql_federation_example

./: README.md  main.py  pyproject.toml
